--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -1577,7 +1577,7 @@ WinApi.Messages$(PPUEXT): $(NSWINDOWSDIR)/WinApi.Messages.pp $(MESSAGES_DEPS)
 # sysctl
 #
 
-SYSCTL_DEPS=$(BSDINC)/sysctl.pp $(SYSTEMUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) \
+SYSCTL_DEPS=$(BSDINC)/sysctl.pp $(SYSTEMUNIT)$(PPUEXT) $(SYSCALLUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) \
             $(SYSCTL_DEPS_OS) $(SYSCTL_DEPS_CPU)
 
 
