--- a/rtl/freertos/Makefile.fpc
+++ b/rtl/freertos/Makefile.fpc
@@ -23,7 +23,7 @@ units=$(SYSTEMUNIT) $(CPU_UNITS) $(UUCHARUNIT) objpas $(ISO7185UNIT) $(EXTPASUNI
        $(CHARACTERUNIT)
 implicitunits=$(EXEINFOUNIT) $(CP_UNITS) $(UNICODEDATAUNIT)
 
-#rsts=$(MATHUNIT) rtlconsts varutils typinfo variants classes sysconst dateutil
+#rsts=$(MATHUNIT) rtlconsts varutils typinfo variants classes $(SYSCONSTUNIT) dateutil
 
 [require]
 nortl=y
