--- a/rtl/sinclairql/Makefile.fpc
+++ b/rtl/sinclairql/Makefile.fpc
@@ -14,7 +14,7 @@ implicitunits=si_prc \
       $(SORTBASEUNIT) $(CHARSETUNIT) $(FPWIDESTRINGUNIT) \
       $(CP_UNITS) $(UNICODEDATAUNIT)
 
-rsts=$(MATHUNIT) rtlconsts typinfo classes sysconst
+rsts=$(MATHUNIT) rtlconsts typinfo classes $(SYSCONSTUNIT)
 
 [require]
 nortl=y
